# toucan-plot

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: nuitka-release.yml  python-package.yml
src/: main.py
src/toucan_plot/: __main__.py  main.py
src/toucan_plot/utils/: __init__.py  loaders.py  styles.py
